package com.maxqiu.demo.P04_Builder.improve;

import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

/**
 * 房子
 * 
 * @author Max_Qiu
 */
@Getter
@Setter
@ToString
public class House {

    private Integer basic;
    private Integer wall;
    private String roofed;

}
